# Flapjack

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .mxproject  Drone.ioc  Makefile  README.md
CM4/: .cproject  .project  Drone_CM4 Debug.launch
CM4/Core/Inc/: FreeRTOSConfig.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
CM4/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
CM4/Debug/: Drone_CM4.list  makefile  objects.list  sources.mk
CM4/Release/: Drone_CM4.list  makefile  objects.list
CM7/: .cproject  .project  Drone_CM7 Debug.launch
CM7/Core/Inc/: FreeRTOSConfig.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
CM7/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
CM7/Debug/: Drone_CM7.list  makefile  objects.list  sources.mk
CM7/Release/: Drone_CM7.list
Common/Inc/: bmi270.h  common.h  conf.h  control.h  dma.h  filter.h  flight_context.h  hal.h  imu.h  log.h  motion_control.h  pid.h  sync.h
Common/Inc/coms/: uart.h
Common/Inc/log/: format.h  logger.h
Common/Inc/mc/: actuators.h  dshot.h  (+2 more)
Common/Src/: common.c  control.c  dma.c  filter.c  flight_context.c  imu.c  init.c  log.c  motion_control.c  pid.c  sync.c  system_stm32h7xx_dualcore_boot_cm4_cm7.c  uart.c
Design/: pin_layout.ioc
Design/FC/: #auto_saved_files#  _autosave-fc.kicad_prl  _autosave-fc.kicad_pro  fc.kicad_pcb  fc.kicad_prl  fc.kicad_pro  fc.kicad_sch  flight_controller.kicad_sch  fp-info-cache  fp-lib-table  power.kicad_sch  sym-lib-table  ~fc.kicad_pcb.lck  ~fc.kicad_sch.lck
GUI/: conf.py  main.py  requirements.txt
Renode/: m4.repl  pwr.py  stm32h747.repl  stm32h747.resc
Renode/Alt/: m7.repl  m7_only.resc
Renode/Logs/: renode.log.2  renode.log.3  renode.log.4
Scripts/: CM4.mk  CM7.mk  env.bash  env.ps1
Tests/: CMakeLists.txt  README.md  register_tests.py  registered_tests.c  test.bash  test_filter.c  test_imu.c  test_queue.c  test_runner.c  test_runner.h
Tests/stubs/: hal_stub.c
(+236 files in other folders)
